<resources>
    <string name="app_name">OpKomst Admin</string>
    <string name="title_activity_faculty__home">Faculty_Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sameeksha Tandon</string>
    <string name="nav_header_subtitle">Computer Science</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_chats">Subject Chats</string>
    <string name="menu_notices">Notices</string>
    <string name="menu_timeTable">Time Table</string>

    <string name="home_second">Home Second</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
