<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="project.final_year.opkomstadmin.Faculty.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="project.final_year.opkomstadmin.Faculty.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_chats"
        android:name="project.final_year.opkomstadmin.Faculty.SubjectChats"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_subjects_chats" />

    <fragment
        android:id="@+id/nav_notices"
        android:name="project.final_year.opkomstadmin.Faculty.NoticeFragment"
        android:label="@string/menu_notices"
        tools:layout="@layout/fragment_notice" />

    <fragment
        android:id="@+id/nav_timetable"
        android:name="project.final_year.opkomstadmin.Faculty.TimeTableFragment"
        android:label="@string/menu_timeTable"
        tools:layout="@layout/fragment_time_table" />
</navigation>